parser.output
Grammar

    0 $accept: program $end

    1 program: ExtDefList

    2 ExtDefList: /* empty */
    3           | ExtDef ExtDefList

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier FuncDec CompSt
    6       | error SEMI

    7 StructSpecifier: STRUCT OptTag LC DefList RC
    8                | STRUCT Tag

    9 Specifier: TYPE
   10          | StructSpecifier

   11 OptTag: ID
   12       | /* empty */

   13 Tag: ID

   14 ExtDecList: VarDec
   15           | VarDec COMMA ExtDecList

   16 VarDec: ID
   17       | VarDec LB INT RB

   18 FuncDec: ID LP VarList RP
   19        | ID LP RP

   20 VarList: ParamDec
   21        | ParamDec COMMA VarList

   22 ParamDec: Specifier VarDec

   23 CompSt: LC DefList StmList RC

   24 StmList: /* empty */
   25        | Stmt StmList

   26 Stmt: Exp SEMI
   27     | CompSt
   28     | RETURN Exp SEMI
   29     | IF LP Exp RP Stmt
   30     | IF LP Exp RP Stmt ELSE Stmt
   31     | WHILE LP Exp RP Stmt

   32 DefList: /* empty */
   33        | Def DefList

   34 Def: Specifier DecList SEMI

   35 DecList: Dec
   36        | Dec COMMA DecList

   37 Dec: VarDec
   38    | VarDec ASSIGNOP Exp

   39 Exp: Exp ASSIGNOP Exp
   40    | Exp AND Exp
   41    | Exp OR Exp
   42    | Exp RELOP Exp
   43    | Exp PLUS Exp
   44    | Exp MINUS Exp
   45    | Exp STAR Exp
   46    | Exp DIV Exp
   47    | LP Exp RP
   48    | MINUS Exp
   49    | Exp INC
   50    | Exp DEC
   51    | NOT Exp
   52    | ID LP Args RP
   53    | ID LP RP
   54    | ID
   55    | INT
   56    | FLOAT
   57    | DOUBLE
   58    | CHAR

   59 Args: Exp COMMA Args
   60     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 6
INT (258) 17 55
ID (259) 11 13 16 18 19 52 53 54
RELOP (260) 42
TYPE (261) 9
STRUCT (262) 7 8
FLOAT (263) 56
DOUBLE (264) 57
CHAR (265) 58
LP (266) 18 19 29 30 31 47 52 53
RP (267) 18 19 29 30 31 47 52 53
LB (268) 17
RB (269) 17
LC (270) 7 23
RC (271) 7 23
SEMI (272) 4 6 26 28 34
COMMA (273) 15 21 36 59
PLUS (274) 43
MINUS (275) 44 48
STAR (276) 45
DIV (277) 46
ASSIGNOP (278) 38 39
AND (279) 40
OR (280) 41
NOT (281) 51
IF (282) 29 30
ELSE (283) 30
WHILE (284) 31
RETURN (285) 28
INC (286) 49
DEC (287) 50
UMINUS (288)
LOWER_THEN_ELSE (289)


Nonterminals, with rules where they appear

$accept (35)
    on left: 0
program (36)
    on left: 1, on right: 0
ExtDefList (37)
    on left: 2 3, on right: 1 3
ExtDef (38)
    on left: 4 5 6, on right: 3
StructSpecifier (39)
    on left: 7 8, on right: 10
Specifier (40)
    on left: 9 10, on right: 4 5 22 34
OptTag (41)
    on left: 11 12, on right: 7
Tag (42)
    on left: 13, on right: 8
ExtDecList (43)
    on left: 14 15, on right: 4 15
VarDec (44)
    on left: 16 17, on right: 14 15 17 22 37 38
FuncDec (45)
    on left: 18 19, on right: 5
VarList (46)
    on left: 20 21, on right: 18 21
ParamDec (47)
    on left: 22, on right: 20 21
CompSt (48)
    on left: 23, on right: 5 27
StmList (49)
    on left: 24 25, on right: 23 25
Stmt (50)
    on left: 26 27 28 29 30 31, on right: 25 29 30 31
DefList (51)
    on left: 32 33, on right: 7 23 33
Def (52)
    on left: 34, on right: 33
DecList (53)
    on left: 35 36, on right: 34 36
Dec (54)
    on left: 37 38, on right: 35 36
Exp (55)
    on left: 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56
    57 58, on right: 26 28 29 30 31 38 39 40 41 42 43 44 45 46 47 48
    49 50 51 59 60
Args (56)
    on left: 59 60, on right: 52 59


state 0

    0 $accept: . program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 2 (ExtDefList)

    program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    StructSpecifier  go to state 7
    Specifier        go to state 8


state 1

    6 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


state 2

    9 Specifier: TYPE .

    $default  reduce using rule 9 (Specifier)


state 3

    7 StructSpecifier: STRUCT . OptTag LC DefList RC
    8                | STRUCT . Tag

    ID  shift, and go to state 10

    $default  reduce using rule 12 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


state 4

    0 $accept: program . $end

    $end  shift, and go to state 13


state 5

    1 program: ExtDefList .

    $default  reduce using rule 1 (program)


state 6

    3 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 2 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    StructSpecifier  go to state 7
    Specifier        go to state 8


state 7

   10 Specifier: StructSpecifier .

    $default  reduce using rule 10 (Specifier)


state 8

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . FuncDec CompSt

    ID  shift, and go to state 15

    ExtDecList  go to state 16
    VarDec      go to state 17
    FuncDec     go to state 18


state 9

    6 ExtDef: error SEMI .

    $default  reduce using rule 6 (ExtDef)


state 10

   11 OptTag: ID .
   13 Tag: ID .

    ID        reduce using rule 13 (Tag)
    $default  reduce using rule 11 (OptTag)


state 11

    7 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 19


state 12

    8 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 8 (StructSpecifier)


state 13

    0 $accept: program $end .

    $default  accept


state 14

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


state 15

   16 VarDec: ID .
   18 FuncDec: ID . LP VarList RP
   19        | ID . LP RP

    LP  shift, and go to state 20

    $default  reduce using rule 16 (VarDec)


state 16

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 21


state 17

   14 ExtDecList: VarDec .
   15           | VarDec . COMMA ExtDecList
   17 VarDec: VarDec . LB INT RB

    LB     shift, and go to state 22
    COMMA  shift, and go to state 23

    $default  reduce using rule 14 (ExtDecList)


state 18

    5 ExtDef: Specifier FuncDec . CompSt

    LC  shift, and go to state 24

    CompSt  go to state 25


state 19

    7 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 32 (DefList)

    StructSpecifier  go to state 7
    Specifier        go to state 26
    DefList          go to state 27
    Def              go to state 28


state 20

   18 FuncDec: ID LP . VarList RP
   19        | ID LP . RP

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3
    RP      shift, and go to state 29

    StructSpecifier  go to state 7
    Specifier        go to state 30
    VarList          go to state 31
    ParamDec         go to state 32


state 21

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


state 22

   17 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 33


state 23

   15 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 34

    ExtDecList  go to state 35
    VarDec      go to state 17


state 24

   23 CompSt: LC . DefList StmList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 32 (DefList)

    StructSpecifier  go to state 7
    Specifier        go to state 26
    DefList          go to state 36
    Def              go to state 28


state 25

    5 ExtDef: Specifier FuncDec CompSt .

    $default  reduce using rule 5 (ExtDef)


state 26

   34 Def: Specifier . DecList SEMI

    ID  shift, and go to state 34

    VarDec   go to state 37
    DecList  go to state 38
    Dec      go to state 39


state 27

    7 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 40


state 28

   33 DefList: Def . DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 32 (DefList)

    StructSpecifier  go to state 7
    Specifier        go to state 26
    DefList          go to state 41
    Def              go to state 28


state 29

   19 FuncDec: ID LP RP .

    $default  reduce using rule 19 (FuncDec)


state 30

   22 ParamDec: Specifier . VarDec

    ID  shift, and go to state 34

    VarDec  go to state 42


state 31

   18 FuncDec: ID LP VarList . RP

    RP  shift, and go to state 43


state 32

   20 VarList: ParamDec .
   21        | ParamDec . COMMA VarList

    COMMA  shift, and go to state 44

    $default  reduce using rule 20 (VarList)


state 33

   17 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 45


state 34

   16 VarDec: ID .

    $default  reduce using rule 16 (VarDec)


state 35

   15 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 15 (ExtDecList)


state 36

   23 CompSt: LC DefList . StmList RC

    INT     shift, and go to state 46
    ID      shift, and go to state 47
    FLOAT   shift, and go to state 48
    DOUBLE  shift, and go to state 49
    CHAR    shift, and go to state 50
    LP      shift, and go to state 51
    LC      shift, and go to state 24
    MINUS   shift, and go to state 52
    NOT     shift, and go to state 53
    IF      shift, and go to state 54
    WHILE   shift, and go to state 55
    RETURN  shift, and go to state 56

    $default  reduce using rule 24 (StmList)

    CompSt   go to state 57
    StmList  go to state 58
    Stmt     go to state 59
    Exp      go to state 60


state 37

   17 VarDec: VarDec . LB INT RB
   37 Dec: VarDec .
   38    | VarDec . ASSIGNOP Exp

    LB        shift, and go to state 22
    ASSIGNOP  shift, and go to state 61

    $default  reduce using rule 37 (Dec)


state 38

   34 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 62


state 39

   35 DecList: Dec .
   36        | Dec . COMMA DecList

    COMMA  shift, and go to state 63

    $default  reduce using rule 35 (DecList)


state 40

    7 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 7 (StructSpecifier)


state 41

   33 DefList: Def DefList .

    $default  reduce using rule 33 (DefList)


state 42

   17 VarDec: VarDec . LB INT RB
   22 ParamDec: Specifier VarDec .

    LB  shift, and go to state 22

    $default  reduce using rule 22 (ParamDec)


state 43

   18 FuncDec: ID LP VarList RP .

    $default  reduce using rule 18 (FuncDec)


state 44

   21 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    StructSpecifier  go to state 7
    Specifier        go to state 30
    VarList          go to state 64
    ParamDec         go to state 32


state 45

   17 VarDec: VarDec LB INT RB .

    $default  reduce using rule 17 (VarDec)


state 46

   55 Exp: INT .

    $default  reduce using rule 55 (Exp)


state 47

   52 Exp: ID . LP Args RP
   53    | ID . LP RP
   54    | ID .

    LP  shift, and go to state 65

    $default  reduce using rule 54 (Exp)


state 48

   56 Exp: FLOAT .

    $default  reduce using rule 56 (Exp)


state 49

   57 Exp: DOUBLE .

    $default  reduce using rule 57 (Exp)


state 50

   58 Exp: CHAR .

    $default  reduce using rule 58 (Exp)


state 51

   47 Exp: LP . Exp RP

    INT     shift, and go to state 46
    ID      shift, and go to state 47
    FLOAT   shift, and go to state 48
    DOUBLE  shift, and go to state 49
    CHAR    shift, and go to state 50
    LP      shift, and go to state 51
    MINUS   shift, and go to state 52
    NOT     shift, and go to state 53

    Exp  go to state 66


state 52

   48 Exp: MINUS . Exp

    INT     shift, and go to state 46
    ID      shift, and go to state 47
    FLOAT   shift, and go to state 48
    DOUBLE  shift, and go to state 49
    CHAR    shift, and go to state 50
    LP      shift, and go to state 51
    MINUS   shift, and go to state 52
    NOT     shift, and go to state 53

    Exp  go to state 67


state 53

   51 Exp: NOT . Exp

    INT     shift, and go to state 46
    ID      shift, and go to state 47
    FLOAT   shift, and go to state 48
    DOUBLE  shift, and go to state 49
    CHAR    shift, and go to state 50
    LP      shift, and go to state 51
    MINUS   shift, and go to state 52
    NOT     shift, and go to state 53

    Exp  go to state 68


state 54

   29 Stmt: IF . LP Exp RP Stmt
   30     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 69


state 55

   31 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 70


state 56

   28 Stmt: RETURN . Exp SEMI

    INT     shift, and go to state 46
    ID      shift, and go to state 47
    FLOAT   shift, and go to state 48
    DOUBLE  shift, and go to state 49
    CHAR    shift, and go to state 50
    LP      shift, and go to state 51
    MINUS   shift, and go to state 52
    NOT     shift, and go to state 53

    Exp  go to state 71


state 57

   27 Stmt: CompSt .

    $default  reduce using rule 27 (Stmt)


state 58

   23 CompSt: LC DefList StmList . RC

    RC  shift, and go to state 72


state 59

   25 StmList: Stmt . StmList

    INT     shift, and go to state 46
    ID      shift, and go to state 47
    FLOAT   shift, and go to state 48
    DOUBLE  shift, and go to state 49
    CHAR    shift, and go to state 50
    LP      shift, and go to state 51
    LC      shift, and go to state 24
    MINUS   shift, and go to state 52
    NOT     shift, and go to state 53
    IF      shift, and go to state 54
    WHILE   shift, and go to state 55
    RETURN  shift, and go to state 56

    $default  reduce using rule 24 (StmList)

    CompSt   go to state 57
    StmList  go to state 73
    Stmt     go to state 59
    Exp      go to state 60


state 60

   26 Stmt: Exp . SEMI
   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   49    | Exp . INC
   50    | Exp . DEC

    RELOP     shift, and go to state 74
    SEMI      shift, and go to state 75
    PLUS      shift, and go to state 76
    MINUS     shift, and go to state 77
    STAR      shift, and go to state 78
    DIV       shift, and go to state 79
    ASSIGNOP  shift, and go to state 80
    AND       shift, and go to state 81
    OR        shift, and go to state 82
    INC       shift, and go to state 83
    DEC       shift, and go to state 84


state 61

   38 Dec: VarDec ASSIGNOP . Exp

    INT     shift, and go to state 46
    ID      shift, and go to state 47
    FLOAT   shift, and go to state 48
    DOUBLE  shift, and go to state 49
    CHAR    shift, and go to state 50
    LP      shift, and go to state 51
    MINUS   shift, and go to state 52
    NOT     shift, and go to state 53

    Exp  go to state 85


state 62

   34 Def: Specifier DecList SEMI .

    $default  reduce using rule 34 (Def)


state 63

   36 DecList: Dec COMMA . DecList

    ID  shift, and go to state 34

    VarDec   go to state 37
    DecList  go to state 86
    Dec      go to state 39


state 64

   21 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 21 (VarList)


state 65

   52 Exp: ID LP . Args RP
   53    | ID LP . RP

    INT     shift, and go to state 46
    ID      shift, and go to state 47
    FLOAT   shift, and go to state 48
    DOUBLE  shift, and go to state 49
    CHAR    shift, and go to state 50
    LP      shift, and go to state 51
    RP      shift, and go to state 87
    MINUS   shift, and go to state 52
    NOT     shift, and go to state 53

    Exp   go to state 88
    Args  go to state 89


state 66

   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   47    | LP Exp . RP
   49    | Exp . INC
   50    | Exp . DEC

    RELOP     shift, and go to state 74
    RP        shift, and go to state 90
    PLUS      shift, and go to state 76
    MINUS     shift, and go to state 77
    STAR      shift, and go to state 78
    DIV       shift, and go to state 79
    ASSIGNOP  shift, and go to state 80
    AND       shift, and go to state 81
    OR        shift, and go to state 82
    INC       shift, and go to state 83
    DEC       shift, and go to state 84


state 67

   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   48    | MINUS Exp .
   49    | Exp . INC
   50    | Exp . DEC

    $default  reduce using rule 48 (Exp)


state 68

   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   49    | Exp . INC
   50    | Exp . DEC
   51    | NOT Exp .

    $default  reduce using rule 51 (Exp)


state 69

   29 Stmt: IF LP . Exp RP Stmt
   30     | IF LP . Exp RP Stmt ELSE Stmt

    INT     shift, and go to state 46
    ID      shift, and go to state 47
    FLOAT   shift, and go to state 48
    DOUBLE  shift, and go to state 49
    CHAR    shift, and go to state 50
    LP      shift, and go to state 51
    MINUS   shift, and go to state 52
    NOT     shift, and go to state 53

    Exp  go to state 91


state 70

   31 Stmt: WHILE LP . Exp RP Stmt

    INT     shift, and go to state 46
    ID      shift, and go to state 47
    FLOAT   shift, and go to state 48
    DOUBLE  shift, and go to state 49
    CHAR    shift, and go to state 50
    LP      shift, and go to state 51
    MINUS   shift, and go to state 52
    NOT     shift, and go to state 53

    Exp  go to state 92


state 71

   28 Stmt: RETURN Exp . SEMI
   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   49    | Exp . INC
   50    | Exp . DEC

    RELOP     shift, and go to state 74
    SEMI      shift, and go to state 93
    PLUS      shift, and go to state 76
    MINUS     shift, and go to state 77
    STAR      shift, and go to state 78
    DIV       shift, and go to state 79
    ASSIGNOP  shift, and go to state 80
    AND       shift, and go to state 81
    OR        shift, and go to state 82
    INC       shift, and go to state 83
    DEC       shift, and go to state 84


state 72

   23 CompSt: LC DefList StmList RC .

    $default  reduce using rule 23 (CompSt)


state 73

   25 StmList: Stmt StmList .

    $default  reduce using rule 25 (StmList)


state 74

   42 Exp: Exp RELOP . Exp

    INT     shift, and go to state 46
    ID      shift, and go to state 47
    FLOAT   shift, and go to state 48
    DOUBLE  shift, and go to state 49
    CHAR    shift, and go to state 50
    LP      shift, and go to state 51
    MINUS   shift, and go to state 52
    NOT     shift, and go to state 53

    Exp  go to state 94


state 75

   26 Stmt: Exp SEMI .

    $default  reduce using rule 26 (Stmt)


state 76

   43 Exp: Exp PLUS . Exp

    INT     shift, and go to state 46
    ID      shift, and go to state 47
    FLOAT   shift, and go to state 48
    DOUBLE  shift, and go to state 49
    CHAR    shift, and go to state 50
    LP      shift, and go to state 51
    MINUS   shift, and go to state 52
    NOT     shift, and go to state 53

    Exp  go to state 95


state 77

   44 Exp: Exp MINUS . Exp

    INT     shift, and go to state 46
    ID      shift, and go to state 47
    FLOAT   shift, and go to state 48
    DOUBLE  shift, and go to state 49
    CHAR    shift, and go to state 50
    LP      shift, and go to state 51
    MINUS   shift, and go to state 52
    NOT     shift, and go to state 53

    Exp  go to state 96


state 78

   45 Exp: Exp STAR . Exp

    INT     shift, and go to state 46
    ID      shift, and go to state 47
    FLOAT   shift, and go to state 48
    DOUBLE  shift, and go to state 49
    CHAR    shift, and go to state 50
    LP      shift, and go to state 51
    MINUS   shift, and go to state 52
    NOT     shift, and go to state 53

    Exp  go to state 97


state 79

   46 Exp: Exp DIV . Exp

    INT     shift, and go to state 46
    ID      shift, and go to state 47
    FLOAT   shift, and go to state 48
    DOUBLE  shift, and go to state 49
    CHAR    shift, and go to state 50
    LP      shift, and go to state 51
    MINUS   shift, and go to state 52
    NOT     shift, and go to state 53

    Exp  go to state 98


state 80

   39 Exp: Exp ASSIGNOP . Exp

    INT     shift, and go to state 46
    ID      shift, and go to state 47
    FLOAT   shift, and go to state 48
    DOUBLE  shift, and go to state 49
    CHAR    shift, and go to state 50
    LP      shift, and go to state 51
    MINUS   shift, and go to state 52
    NOT     shift, and go to state 53

    Exp  go to state 99


state 81

   40 Exp: Exp AND . Exp

    INT     shift, and go to state 46
    ID      shift, and go to state 47
    FLOAT   shift, and go to state 48
    DOUBLE  shift, and go to state 49
    CHAR    shift, and go to state 50
    LP      shift, and go to state 51
    MINUS   shift, and go to state 52
    NOT     shift, and go to state 53

    Exp  go to state 100


state 82

   41 Exp: Exp OR . Exp

    INT     shift, and go to state 46
    ID      shift, and go to state 47
    FLOAT   shift, and go to state 48
    DOUBLE  shift, and go to state 49
    CHAR    shift, and go to state 50
    LP      shift, and go to state 51
    MINUS   shift, and go to state 52
    NOT     shift, and go to state 53

    Exp  go to state 101


state 83

   49 Exp: Exp INC .

    $default  reduce using rule 49 (Exp)


state 84

   50 Exp: Exp DEC .

    $default  reduce using rule 50 (Exp)


state 85

   38 Dec: VarDec ASSIGNOP Exp .
   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   49    | Exp . INC
   50    | Exp . DEC

    RELOP     shift, and go to state 74
    PLUS      shift, and go to state 76
    MINUS     shift, and go to state 77
    STAR      shift, and go to state 78
    DIV       shift, and go to state 79
    ASSIGNOP  shift, and go to state 80
    AND       shift, and go to state 81
    OR        shift, and go to state 82
    INC       shift, and go to state 83
    DEC       shift, and go to state 84

    $default  reduce using rule 38 (Dec)


state 86

   36 DecList: Dec COMMA DecList .

    $default  reduce using rule 36 (DecList)


state 87

   53 Exp: ID LP RP .

    $default  reduce using rule 53 (Exp)


state 88

   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   49    | Exp . INC
   50    | Exp . DEC
   59 Args: Exp . COMMA Args
   60     | Exp .

    RELOP     shift, and go to state 74
    COMMA     shift, and go to state 102
    PLUS      shift, and go to state 76
    MINUS     shift, and go to state 77
    STAR      shift, and go to state 78
    DIV       shift, and go to state 79
    ASSIGNOP  shift, and go to state 80
    AND       shift, and go to state 81
    OR        shift, and go to state 82
    INC       shift, and go to state 83
    DEC       shift, and go to state 84

    $default  reduce using rule 60 (Args)


state 89

   52 Exp: ID LP Args . RP

    RP  shift, and go to state 103


state 90

   47 Exp: LP Exp RP .

    $default  reduce using rule 47 (Exp)


state 91

   29 Stmt: IF LP Exp . RP Stmt
   30     | IF LP Exp . RP Stmt ELSE Stmt
   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   49    | Exp . INC
   50    | Exp . DEC

    RELOP     shift, and go to state 74
    RP        shift, and go to state 104
    PLUS      shift, and go to state 76
    MINUS     shift, and go to state 77
    STAR      shift, and go to state 78
    DIV       shift, and go to state 79
    ASSIGNOP  shift, and go to state 80
    AND       shift, and go to state 81
    OR        shift, and go to state 82
    INC       shift, and go to state 83
    DEC       shift, and go to state 84


state 92

   31 Stmt: WHILE LP Exp . RP Stmt
   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   49    | Exp . INC
   50    | Exp . DEC

    RELOP     shift, and go to state 74
    RP        shift, and go to state 105
    PLUS      shift, and go to state 76
    MINUS     shift, and go to state 77
    STAR      shift, and go to state 78
    DIV       shift, and go to state 79
    ASSIGNOP  shift, and go to state 80
    AND       shift, and go to state 81
    OR        shift, and go to state 82
    INC       shift, and go to state 83
    DEC       shift, and go to state 84


state 93

   28 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 28 (Stmt)


state 94

   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   42    | Exp RELOP Exp .
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   49    | Exp . INC
   50    | Exp . DEC

    PLUS   shift, and go to state 76
    MINUS  shift, and go to state 77
    STAR   shift, and go to state 78
    DIV    shift, and go to state 79
    INC    shift, and go to state 83
    DEC    shift, and go to state 84

    $default  reduce using rule 42 (Exp)


state 95

   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   43    | Exp PLUS Exp .
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   49    | Exp . INC
   50    | Exp . DEC

    STAR  shift, and go to state 78
    DIV   shift, and go to state 79

    $default  reduce using rule 43 (Exp)


state 96

   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   44    | Exp MINUS Exp .
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   49    | Exp . INC
   50    | Exp . DEC

    STAR  shift, and go to state 78
    DIV   shift, and go to state 79

    $default  reduce using rule 44 (Exp)


state 97

   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   45    | Exp STAR Exp .
   46    | Exp . DIV Exp
   49    | Exp . INC
   50    | Exp . DEC

    $default  reduce using rule 45 (Exp)


state 98

   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   46    | Exp DIV Exp .
   49    | Exp . INC
   50    | Exp . DEC

    $default  reduce using rule 46 (Exp)


state 99

   39 Exp: Exp . ASSIGNOP Exp
   39    | Exp ASSIGNOP Exp .
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   49    | Exp . INC
   50    | Exp . DEC

    RELOP  shift, and go to state 74
    PLUS   shift, and go to state 76
    MINUS  shift, and go to state 77
    STAR   shift, and go to state 78
    DIV    shift, and go to state 79
    AND    shift, and go to state 81
    OR     shift, and go to state 82
    INC    shift, and go to state 83
    DEC    shift, and go to state 84

    $default  reduce using rule 39 (Exp)


state 100

   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   40    | Exp AND Exp .
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   49    | Exp . INC
   50    | Exp . DEC

    RELOP  shift, and go to state 74
    PLUS   shift, and go to state 76
    MINUS  shift, and go to state 77
    STAR   shift, and go to state 78
    DIV    shift, and go to state 79
    INC    shift, and go to state 83
    DEC    shift, and go to state 84

    $default  reduce using rule 40 (Exp)


state 101

   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   41    | Exp OR Exp .
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   49    | Exp . INC
   50    | Exp . DEC

    RELOP  shift, and go to state 74
    PLUS   shift, and go to state 76
    MINUS  shift, and go to state 77
    STAR   shift, and go to state 78
    DIV    shift, and go to state 79
    AND    shift, and go to state 81
    INC    shift, and go to state 83
    DEC    shift, and go to state 84

    $default  reduce using rule 41 (Exp)


state 102

   59 Args: Exp COMMA . Args

    INT     shift, and go to state 46
    ID      shift, and go to state 47
    FLOAT   shift, and go to state 48
    DOUBLE  shift, and go to state 49
    CHAR    shift, and go to state 50
    LP      shift, and go to state 51
    MINUS   shift, and go to state 52
    NOT     shift, and go to state 53

    Exp   go to state 88
    Args  go to state 106


state 103

   52 Exp: ID LP Args RP .

    $default  reduce using rule 52 (Exp)


state 104

   29 Stmt: IF LP Exp RP . Stmt
   30     | IF LP Exp RP . Stmt ELSE Stmt

    INT     shift, and go to state 46
    ID      shift, and go to state 47
    FLOAT   shift, and go to state 48
    DOUBLE  shift, and go to state 49
    CHAR    shift, and go to state 50
    LP      shift, and go to state 51
    LC      shift, and go to state 24
    MINUS   shift, and go to state 52
    NOT     shift, and go to state 53
    IF      shift, and go to state 54
    WHILE   shift, and go to state 55
    RETURN  shift, and go to state 56

    CompSt  go to state 57
    Stmt    go to state 107
    Exp     go to state 60


state 105

   31 Stmt: WHILE LP Exp RP . Stmt

    INT     shift, and go to state 46
    ID      shift, and go to state 47
    FLOAT   shift, and go to state 48
    DOUBLE  shift, and go to state 49
    CHAR    shift, and go to state 50
    LP      shift, and go to state 51
    LC      shift, and go to state 24
    MINUS   shift, and go to state 52
    NOT     shift, and go to state 53
    IF      shift, and go to state 54
    WHILE   shift, and go to state 55
    RETURN  shift, and go to state 56

    CompSt  go to state 57
    Stmt    go to state 108
    Exp     go to state 60


state 106

   59 Args: Exp COMMA Args .

    $default  reduce using rule 59 (Args)


state 107

   29 Stmt: IF LP Exp RP Stmt .
   30     | IF LP Exp RP Stmt . ELSE Stmt
